--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Testing 3</title>
+	<title>hello 3</title>
 </head>
 <body>
-<h1>Testing 3</h1>
+<h1>hello 3</h1>
 </body>
 </html>
